2016-04-19
  - 分开了普通登录和后台登录页面，地址分别如下：  
    /sign_in  
    /sign_in?role=manager  
    从不同的登录页面登录，会转到不同的位置

  - 增加了内容选择向导，不过岗位级别关系配置没有实现，所以目前这个内容选择向导是假的  
    里面列出来的课件是根据吴笛给出的业务编码列出的

演示要点：
  内外页 LOGO 已替换
  