@@ -7,9 +7,8 @@
         number: @state.ware.number
         name: @state.ware.name
         desc: @state.ware.desc
-
-        linked_flows: []
-        gainian: {}
+        business_kind_str: @state.ware.business_kind_str
+        relative_wares: @state.ware.relative_wares || []
       actioninfo:
         actions: @state.ware.actions
 
