@@ -17,10 +17,14 @@ class DataFormer
   include Finance::TellerWareTradeFormer
 
   def self.paginate_data(models)
-    {
-      total_pages: models.total_pages,
-      current_page: models.current_page,
-      per_page: models.limit_value
-    }
+    begin
+      {
+        total_pages: models.total_pages,
+        current_page: models.current_page,
+        per_page: models.limit_value
+      }
+    rescue
+      {}
+    end
   end
 end
