@@ -7,6 +7,10 @@
   - 增加了内容选择向导，不过岗位级别关系配置没有实现，所以目前这个内容选择向导是假的  
     里面列出来的课件是根据吴笛给出的业务编码列出的
 
-演示要点：
-  内外页 LOGO 已替换
+2016-04-20
+  第一次部署
+    - 修正了交易概述和操作概述的横向滚动问题
+    - 修正了 https://coding.net/u/ben7th/p/kc-preview/topic/119006
+    - 调整了相关交易的显示
+    - 修正了分页组件的一些显示 BUG
   
